# yaa

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.chainlit/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: image-push.yaml
yaa/: chainlit_entrypoint.py  main.py
