[project]
name = "yaa"
version = "0.1.0"
description = "yaa: yammer's AI Agent"
authors = [
    {name = "Keisuke Nakayama",email = "me@yammer.jp"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "chainlit (>=2.1.1,<3.0.0)",
    "langchain[all] (>=0.3.17,<0.4.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "boto3 (>=1.36.16,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
